2002-04-09 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.c: Fixed draw direction of arcs reported in
	  bug #541089. Not drawn D3 and VR1, and wrong size on some
	  transistors, still open.
	

2002-04-03 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.c, src/gerber.h: Fixed some numerical
	  constants in verify code.
	

2002-04-03 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Added color selection on layers.
	* TODO: Added zooming and gerber layers.

	
2002-02-10 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c: Added inclusion of string.h as pointed out by 
	  Dan McMahill.
	

-- Release 0.0.7 --	

	
2002-02-03 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c: Fixed bugs in drawing primitive 6 and 7 after
	  verification. The last primitives...
	* example/am-test/am-test.gbx: The verification suite for 
	  aperture macros.
	
	
2002-01-06 Stefan Petersen (spe@stacken.kth.se)

	* src/amacro.c: Parser handles negative immediate values.
	* src/draw.c: Load of minor bugfixes after verification like 
	  rotate points in the other direction, line wiidths constant,
	  wrong indeces.
	* src/gerber.c: Rewrote parse_aperture_defintion to handle 
	  aperture defintions without parameters.
	

2002-01-06 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c: All primitive macros are implemented (though not
	  completely) and passed the MS-test; they compile. Now it's 
	  verify, verify and verify.

	
2001-12-31 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c: Started to add functions to be able to draw
	  aperture macros too. Some aperture macro primitives are 
	  half way implemented, so the examples in the distribution
	  should work. Though not 100% properly.
	
	
2001-12-30 Stefan Petersen (spe@stacken.kth.se)

        * src/amacro.[hc]: Added, even though I haven't executed 
          an aperture macro program yet. But parsing seems stable.
        * src/gerb_image.[hc], gerber.c, src/Makefile.am: Calls 